--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "vite": "^4.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.44.0"
   }
 }
