--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@wysimark/standalone": "^2.6.2",
     "bootstrap": "^5.3.0",
     "vite": "^4.4.1"
   },
